<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/group1_1"
            android:icon="@drawable/ic_baseline_adb_24"
            android:title="@string/menu1" />

        <item
            android:id="@+id/group1_2"
            android:icon="@drawable/ic_baseline_adb_24"
            android:title="@string/menu2" />

        <item
            android:id="@+id/group1_3"
            android:icon="@drawable/ic_baseline_adb_24"
            android:title="@string/menu3" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/group2_1"
            android:icon="@drawable/ic_baseline_adb_24"
            android:title="@string/menu1" />

        <item
            android:id="@+id/group2_2"
            android:icon="@drawable/ic_baseline_adb_24"
            android:title="@string/menu2" />

        <item
            android:id="@+id/group2_3"
            android:icon="@drawable/ic_baseline_adb_24"
            android:title="@string/menu3" />
    </group>
</menu>